[package]
name = "file-local-ip-replacer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.5", features = ["suggestions", "derive", "color"] }
local-ip-address = "0.4.4"
regex = "1.5.4"
lazy_static = "1.4.0"